feat: checkout service
